--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <div class="row">
                 <div class="col-md-6">
                     <div class="topLeftContent d-flex">
-                        <div class="topber_lang text-white">
+                        <div class="topber_lang">
                             <i class="fa-solid fa-globe"></i>
                             <select class="text-white" aria-label="Default select example">
                                 <option selected>English</option>
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 navTop_res_d_none">
+                <div class="col-md-4 navTop_res_d_none res_col_1620">
                     <div class="midNavSrcCate d-flex">
                         <div class="midNavCategory">
                             <select class="text-muted" aria-label="Default select example">
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 midNav_res_col_4">
+                <div class="col-md-4 midNav_res_col_4 res_col_1620_2">
                     <div class="midNavArrowLoveCart">
                         <div class="midNavArrowLoveCartIcon d-flex">
                             <div class="midNavArrowIcon">
@@ -200,7 +200,7 @@
                         <img src="assets/img/logo/avatar-1.png" alt="" srcset="">
                         <span  class=" navColor" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">My Account</span>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="#">
+                            <li><a class="dropdown-item p-0" href="#">
                                 <div class="profile_user d-flex">
                                     <img src="assets/img/logo/avatar-1.png" alt="" srcset="">
                                     <div class="profile_user_name">
@@ -259,7 +259,7 @@
                                     </div>
                                 </div></a>
                             </li>
-                            <li><a class="dropdown-item" href="#">
+                            <li><a class="dropdown-item p-0" href="#">
                                 <div class="profile_setting logout_border_top d-flex">
                                     <div class="profile_setting_icon p_setting_i">
                                         <i class="fa-solid fa-right-from-bracket"></i>
@@ -345,7 +345,7 @@
                             <img src="assets/img/logo/avatar-1.png" alt="" srcset="">
                             <span  class=" navColor" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">My Account</span>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#">
+                                <li><a class="dropdown-item p-0" href="#">
                                     <div class="profile_user d-flex">
                                         <img src="assets/img/logo/avatar-1.png" alt="" srcset="">
                                         <div class="profile_user_name">
@@ -404,7 +404,7 @@
                                         </div>
                                     </div></a>
                                 </li>
-                                <li><a class="dropdown-item" href="#">
+                                <li><a class="dropdown-item p-0" href="#">
                                     <div class="profile_setting logout_border_top d-flex">
                                         <div class="profile_setting_icon p_setting_i">
                                             <i class="fa-solid fa-right-from-bracket"></i>
@@ -1570,7 +1570,7 @@
         </div>
     </section>
 
-    <section id="Daily_Flash_sell" class="py-5">
+    <section id="Daily_Flash_sell" class="">
         <div class="container">
             <div class="dailyFlash">
                 <h2 class="py-4"><span class="ftColor">Daily</span> Flash Sell</h2>
@@ -1594,7 +1594,7 @@
                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                         </div>
-                        <div class="flashSell_content ps-4">
+                        <div class="flashSell_content px-4">
                             <p class="text-muted">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
                             <h6 class="featured_icon text-warning">
@@ -1632,7 +1632,7 @@
                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                         </div>
-                        <div class="flashSell_content ps-4">
+                        <div class="flashSell_content px-4">
                             <p class="text-muted">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
                             <h6 class="featured_icon text-warning">
@@ -1671,7 +1671,46 @@
                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                         </div>
-                        <div class="flashSell_content ps-4">
+                        <div class="flashSell_content px-4">
+                            <p class="text-muted">By.Agora Agroo ltd</p>
+                            <h2>Agora Food Box</h2>
+                            <h6 class="featured_icon text-warning">
+                                <i class="fas fa-star "></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </h6>
+                            <p class="text-muted">Unit : 500gm</p>
+                            <h4>
+                                <span class="ftColor">$300</span>
+                                <small><s class="text-secondary">$500</s></small>
+                            </h4>
+                            <div class="planLine_3 bg-warning mb-3"></div>
+                            <p class="text-muted ">In Strock : 20/65</p>
+
+                            <div class="featured_btn">
+                                <a href="" class="btn btn-outline-dark my-3 rounded-pill"> <i
+                                        class="fas fa-shopping-cart"></i> Add To Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+               
+                <div class="slick_slide">
+                    <div class="flashSell_col f_border">
+                        <div class="h_S_N_S h_S_N_S_new">
+                            <p>New</p>
+                        </div>
+                        <div class="flashSell_img text-center">
+                            <img src="assets/img/home-1/kopi.jpg" alt="" srcset="">
+                        </div>
+                        <div class="featured_cartIcon">
+                            <a href="#"><i class="fa-regular fa-eye"></i></a>
+                            <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
+                            <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        </div>
+                        <div class="flashSell_content px-4">
                             <p class="text-muted">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
                             <h6 class="featured_icon text-warning">
@@ -1698,44 +1737,6 @@
                 </div>
                 <div class="slick_slide">
                     <div class="flashSell_col f_border">
-                        <div class="h_S_N_S h_S_N_S_new">
-                            <p>New</p>
-                        </div>
-                        <div class="flashSell_img text-center">
-                            <img src="assets/img/home-1/kopi.jpg" alt="" srcset="">
-                        </div>
-                        <div class="featured_cartIcon">
-                            <a href="#"><i class="fa-regular fa-eye"></i></a>
-                            <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
-                            <a href="#"><i class="fa-regular fa-heart"></i></a>
-                        </div>
-                        <div class="flashSell_content ps-4">
-                            <p class="text-muted">By.Agora Agroo ltd</p>
-                            <h2>Agora Food Box</h2>
-                            <h6 class="featured_icon text-warning">
-                                <i class="fas fa-star "></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </h6>
-                            <p class="text-muted">Unit : 500gm</p>
-                            <h4>
-                                <span class="ftColor">$300</span>
-                                <small><s class="text-secondary">$500</s></small>
-                            </h4>
-                            <div class="planLine_3 bg-warning my-3"></div>
-                            <p class="text-muted ">In Strock : 20/65</p>
-
-                            <div class="featured_btn">
-                                <a href="" class="btn btn-outline-dark mb-3 rounded-pill"> <i
-                                        class="fas fa-shopping-cart"></i> Add To Cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="slick_slide">
-                    <div class="flashSell_col f_border">
                         <div class="h_S_N_S h_S_N_S_sale">
                             <p>Sale</p>
                         </div>
@@ -1747,7 +1748,7 @@
                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                         </div>
-                        <div class="flashSell_content ps-4">
+                        <div class="flashSell_content px-4">
                             <p class="text-muted">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
                             <h6 class="featured_icon text-warning">
@@ -1785,7 +1786,7 @@
                             <a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a>
                             <a href="#"><i class="fa-regular fa-heart"></i></a>
                         </div>
-                        <div class="flashSell_content ps-4">
+                        <div class="flashSell_content px-4">
                             <p class="text-muted">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
                             <h6 class="featured_icon text-warning">
