--- a/FAQ.html
+++ b/FAQ.html
@@ -440,7 +440,7 @@
         <div class=" background-res d-flex justify-content-start align-items-center navSubMenu" 
               style="background-image: url('./assets/img/home-1/001.png');">
               <div class="container">
-                  <p class="n_s_m_p mb-0"><span class="n_s_m">Grocery | Home</span> | Version 1</p>
+                  <p class="n_s_m_p mb-0"><span class="n_s_m">Grocery | </span> Faq</p>
               </div>
         </div>
     </section>
