--- a/index.html
+++ b/index.html
@@ -604,14 +604,14 @@
                         <div class="featured_content">
                             <p class="text-muted mt-4">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
-                            <!-- <h6 class="featured_icon text-warning">
+                            <h6 class="featured_icon text-warning">
                                 <i class="fas fa-star "></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
-                            </h6> -->
-                            <h6 class="featured_icon text-warning">
+                            </h6>
+                            <!-- <h6 class="featured_icon text-warning">
                                 <input type="radio" name="rating1" id="rating1">
                                 <label for="rating1" class="fas fa-star " ></label>
                                 <input type="radio" name="rating1" id="rating2">
@@ -622,7 +622,7 @@
                                 <label for="rating4" class="fas fa-star " ></label>
                                 <input type="radio" name="rating1" id="rating5">
                                 <label for="rating5" class="far fa-star " ></label>
-                            </h6>
+                            </h6> -->
                             <p class="text-muted">Unit : 500gm</p>
                             <h4>
                                 <span class="ftColor">$300</span>
@@ -651,17 +651,12 @@
                         <div class="featured_content">
                             <p class="text-muted mt-4">By.Agora Agroo ltd</p>
                             <h2>Agora Food Box</h2>
-                           <h6 class="featured_icon text-warning">
-                                <input type="radio" name="rating1" id="rating1">
-                                <label for="rating1" class="fas fa-star"></label>
-                                <input type="radio" name="rating1" id="rating2">
-                                <label for="rating2" class="fas fa-star"></label>
-                                <input type="radio" name="rating1" id="rating3">
-                                <label for="rating3" class="fas fa-star"></label>
-                                <input type="radio" name="rating1" id="rating4">
-                                <label for="rating4" class="fas fa-star"></label>
-                                <input type="radio" name="rating1" id="rating5">
-                                <label for="rating5" class="far fa-star"></label>
+                            <h6 class="featured_icon text-warning">
+                                <i class="fas fa-star "></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
                             </h6>
                             <p class="text-muted">Unit : 500gm</p>
                             <h4>
