--- a/product_details.html
+++ b/product_details.html
@@ -437,7 +437,7 @@
         <div class=" background-res d-flex justify-content-start align-items-center navSubMenu" 
               style="background-image: url('./assets/img/home-1/001.png');">
               <div class="container">
-                  <p class="n_s_m_p mb-0"><span class="n_s_m">Grocery | </span> product Details</p>
+                  <p class="n_s_m_p mb-0"><span class="n_s_m">Grocery | Product</span> | Product Details</p>
               </div>
         </div>
     </section>
@@ -827,13 +827,18 @@
                           required
                         />
                         <h5 class="mt-3">Your rating</h5>
-                        <h6 class="wishContent_review">
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="far fa-star"></i>
-                        </h6>
+                         <h6 class="wishContent_review">
+                                <input type="radio" name="rating1" id="rating1">
+                                <label for="rating1" class="fas fa-star " ></label>
+                                <input type="radio" name="rating1" id="rating2">
+                                <label for="rating2" class="fas fa-star " ></label>
+                                <input type="radio" name="rating1" id="rating3">
+                                <label for="rating3" class="fas fa-star " ></label>
+                                <input type="radio" name="rating1" id="rating4">
+                                <label for="rating4" class="fas fa-star " ></label>
+                                <input type="radio" name="rating1" id="rating5">
+                                <label for="rating5" class="far fa-star " ></label>
+                            </h6>
                         <textarea
                           rows="5"
                           placeholder="Your Comment"
