--- a/contact.html
+++ b/contact.html
@@ -28,14 +28,13 @@
 </head>
 
 <body>
-
   <header class="bg_color">
     <section id="Topbar" class="">
         <div class="container">
           <div class="row">
             <div class="col-md-6">
                 <div class="topLeftContent d-flex">
-                    <div class="topber_lang text-white">
+                    <div class="topber_lang">
                         <i class="fa-solid fa-globe"></i>
                         <select class="text-white" aria-label="Default select example">
                             <option selected>English</option>
@@ -117,7 +116,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 navTop_res_d_none">
+            <div class="col-md-4 navTop_res_d_none res_col_1620">
                 <div class="midNavSrcCate d-flex">
                     <div class="midNavCategory">
                         <select class="text-muted" aria-label="Default select example">
@@ -142,7 +141,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 midNav_res_col_4">
+            <div class="col-md-4 midNav_res_col_4 res_col_1620_2">
                 <div class="midNavArrowLoveCart">
                     <div class="midNavArrowLoveCartIcon d-flex">
                         <div class="midNavArrowIcon">
@@ -199,7 +198,7 @@
                     <img src="assets/img/logo/avatar-1.png" alt="" srcset="">
                     <span  class=" navColor" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">My Account</span>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="#">
+                        <li><a class="dropdown-item p-0" href="#">
                             <div class="profile_user d-flex">
                                 <img src="assets/img/logo/avatar-1.png" alt="" srcset="">
                                 <div class="profile_user_name">
@@ -258,7 +257,7 @@
                                 </div>
                             </div></a>
                         </li>
-                        <li><a class="dropdown-item" href="#">
+                        <li><a class="dropdown-item p-0" href="#">
                             <div class="profile_setting logout_border_top d-flex">
                                 <div class="profile_setting_icon p_setting_i">
                                     <i class="fa-solid fa-right-from-bracket"></i>
@@ -344,7 +343,7 @@
                         <img src="assets/img/logo/avatar-1.png" alt="" srcset="">
                         <span  class=" navColor" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">My Account</span>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="#">
+                            <li><a class="dropdown-item p-0" href="#">
                                 <div class="profile_user d-flex">
                                     <img src="assets/img/logo/avatar-1.png" alt="" srcset="">
                                     <div class="profile_user_name">
@@ -403,7 +402,7 @@
                                     </div>
                                 </div></a>
                             </li>
-                            <li><a class="dropdown-item" href="#">
+                            <li><a class="dropdown-item p-0" href="#">
                                 <div class="profile_setting logout_border_top d-flex">
                                     <div class="profile_setting_icon p_setting_i">
                                         <i class="fa-solid fa-right-from-bracket"></i>
@@ -428,7 +427,7 @@
       <div class=" background-res d-flex justify-content-start align-items-center navSubMenu" 
             style="background-image: url('./assets/img/home-1/001.png');">
             <div class="container">
-                <p class="n_s_m_p mb-0"><span class="n_s_m">Grocery | </span> Contact</p>
+                <p class="n_s_m_p mb-0"><span class="n_s_m">Grocery | Home</span> | Version 1</p>
             </div>
       </div>
   </section>
