--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="col-md-4 navTop_res_d_none res_col_1620">
                     <div class="midNavSrcCate d-flex">
                         <div class="midNavCategory">
-                            <select class="text-muted" aria-label="Default select example">
+                            <select class="" aria-label="Default select example">
                                 <option selected>All Category</option>
                                 <option value="1">Grocery</option>
                                 <option value="2">Fruits</option>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="midNavSearch">
                             <form class="d-flex midNav_search_border mb-4">
-                                <input class="me-2 midNav_search_field" type="search" placeholder="Search"
+                                <input class="me-2 midNav_search_field" type="search" placeholder="Search by keyboard...."
                                     aria-label="Search">
                                 <button class="btn btn-outline-success midNav_search_btn" type="submit"><i
                                         class="fa-solid fa-magnifying-glass"></i></button>
